@@ -1,3 +1,4 @@
+* Support import of native numeric, date and datetime data
 * Add day view on calendar
 * Raise NotImplementedError when setting Function field without setter
 * Add exports in view_toolbar_get
